# ollama-web-agent

./: README.md  debugger.ipynb  langgraph_ollama_rag_web_agent.py  pyproject.toml  requirements.txt  streamlit_app.py  tester.ipynb
agentico/: README.md  databricks.yml  pyproject.toml
agentico/resources/: agentico.job.yml  agentico.pipeline.yml
agentico/src/: notebook.ipynb  pipeline.ipynb
agentico/tests/: main_test.py
