[project]
name = "ollama-web-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.5.4",
    "faiss-cpu>=1.12.0",
    "langgraph>=0.6.6",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "rich>=14.1.0",
]
