[project]
name = "ollama-web-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "bs4>=0.0.2",
    "ddgs>=9.5.4",
    "faiss-cpu>=1.12.0",
    "langgraph>=0.6.6",
    "langchain-core>=0.2.43,<0.3",
    "numpy>=1.26,<2.2",
    "ollama>=0.3.3",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "streamlit>=1.41.0",
]
